--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./app.css" />
+    <link rel="shortcut icon" th:href="logo.png" type="image/x-icon"/>
     <script
       src="https://unpkg.com/@airgap/beacon-sdk@2.2.3/dist/walletbeacon.min.js"
       integrity="sha384-12/A3/UyuGF7Hdkd8eaSXef8lEO7Jzz4FtJd4NpfZ2j/wlhPM2GWZPoxo8DkxwkI"
@@ -73,7 +74,8 @@
       Special inquiry :
       <a href="mailto:baking.finance@outlook.fr">
         <img id="mail" src="mail.png" alt="francetfv-education-logo-mini éducation" height=25 width=30/>
-      </a> 
+      </a>
     </div>
+    <a id="mobile">*Mobile not supported</a>
   </body>
 </html>
