--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./app.css" />
-    <link rel="shortcut icon" th:href="logo.png" type="image/x-icon"/>
+    <link href="logo.png" rel="shortcut icon" >
     <script
       src="https://unpkg.com/@airgap/beacon-sdk@2.2.3/dist/walletbeacon.min.js"
       integrity="sha384-12/A3/UyuGF7Hdkd8eaSXef8lEO7Jzz4FtJd4NpfZ2j/wlhPM2GWZPoxo8DkxwkI"
