--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Baking.Finance</title>
   </head>
   <body>
-    <h1>Baking.Finance</h1>
+    <h1>Baking.Finance - Delegate your XTZ</h1>
     <img src="logo.png" height=95 width=85/>
     <br></br>
     <div id="dialog">
