--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       integrity="sha384-12/A3/UyuGF7Hdkd8eaSXef8lEO7Jzz4FtJd4NpfZ2j/wlhPM2GWZPoxo8DkxwkI"
       crossorigin="anonymous"
     ></script>
-    <title>Baking.Finance</title>
+    <title>Baking.Finance - Delegate your XTZ</title>
   </head>
   <body>
-    <h1>Baking.Finance - Delegate your XTZ</h1>
+    <h1>Baking.Finance</h1>
     <img src="logo.png" height=95 width=85/>
     <br></br>
     <div id="dialog">
