--- a/french.html
+++ b/french.html
@@ -26,7 +26,7 @@
       <div  id="content">
         <div id="balance-form">
           <button id="init" class="init">
-            Delegate
+            Déléguer
           </button>
           
           <script>
