--- a/index.html
+++ b/index.html
@@ -83,5 +83,28 @@
       </a>
     </div>
     <a id="mobile">*Mobile not supported</a>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <footer>
+    <div id="copyright">
+      <img src="logo.png" alt="baking-finance-light-logo" id="logo-footer" width="20">Copyright &copy; <a href="index.html" class="fg-white fw-medium">Baking.finance</a>. All rights reserved</p>
+  </div>
+</footer>
   </body>
 </html>
