--- a/french.html
+++ b/french.html
@@ -83,5 +83,28 @@
       </a>
     </div>
     <a id="mobile">*Mobile non supporté</a>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <footer>
+      <div id="copyright">
+        <img src="logo.png" alt="baking-finance-light-logo" id="logo-footer" width="20">Copyright &copy; <a href="french.html" class="fg-white fw-medium">Baking.finance</a>. Tous droits réservés</p>
+    </div>
+  </footer>
   </body>
 </html>
