--- a/french.html
+++ b/french.html
@@ -22,7 +22,7 @@
     <img src="logo.png" height=95 width=85/>
     <br></br>
     <div id="dialog">
-      <div id="header">Déléguez vos XTZ à seulement 5% de frais en un clic !</div>
+      <div id="header">Déléguez vos XTZ à seulement 5% de frais en un clic &#128176;!</div>
       <div  id="content">
         <div id="balance-form">
           <button id="init" class="init">
