--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="logo.png" height=95 width=85/>
     <br></br>
     <div id="dialog">
-      <div id="header">Delegate your XTZ with only 5% fees in one click !</div>
+      <div id="header">Delegate your XTZ with only 5% fees in one click &#128176;!</div>
       <div  id="content">
         <div id="balance-form">
           <button id="init" class="init">
