contact links + moving pic

--- a/french.html
+++ b/french.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./app.css" />
-    <link href="logo.png" rel="shortcut icon" >
+    <link href="./logo.png" rel="shortcut icon" >
     <script
       src="https://unpkg.com/@airgap/beacon-sdk@2.2.3/dist/walletbeacon.min.js"
       integrity="sha384-12/A3/UyuGF7Hdkd8eaSXef8lEO7Jzz4FtJd4NpfZ2j/wlhPM2GWZPoxo8DkxwkI"
@@ -15,12 +15,17 @@
     <a id="drapeau-english-fr" href='index.html'>
       <img src="english.png" height=32 width=30/>
     </a>
+    <a id="telegram" href='https://t.me/baking_finance' target="_blank">
+      <img src="telegram.png" height=38 width=38/>
+    </a>
+    <a id="twitter" href='https://twitter.com/BakingFinance' target="_blank">
+      <img src="twitter.png" height=38 width=38/>
+    </a>
     <title>Baking.Finance - Déléguez vos XTZ</title>
   </head>
   <body>
     <h1>Baking.Finance</h1>
-    <img src="logo.png" height=95 width=85/>
-    <br></br>
+    <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
       <div id="header">Déléguez vos XTZ à seulement 5% de frais en un clic !</div>
       <div  id="content">
@@ -73,37 +78,18 @@
     <br></br>
     <div id="footer">
       Medium :
-      <a href="https://baking-finance.medium.com/">
+      <a href="https://baking-finance.medium.com/" target="_blank">
         <img id="medium" src="medium.png" alt="francetfv-education-logo-mini éducation" height=30 width=120/>
       </a>
-
       Demande particulière :
       <a href="mailto:baking.finance@outlook.fr">
         <img id="mail" src="mail.png" alt="francetfv-education-logo-mini éducation" height=25 width=30/>
       </a>
     </div>
     <a id="mobile">*Mobile non supporté</a>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
     <footer>
       <div id="copyright">
-        <img src="logo.png" alt="baking-finance-light-logo" id="logo-footer" width="20">Copyright &copy; <a href="french.html" class="fg-white fw-medium">Baking.finance</a>. Tous droits réservés</p>
+        <img src="./logo.png" alt="baking-finance-light-logo" id="logo-footer" width="20">Copyright &copy; <a href="french.html" class="fg-white fw-medium">Baking.finance</a>. Tous droits réservés</p>
     </div>
   </footer>
   </body>
