--- a/french.html
+++ b/french.html
@@ -10,10 +10,12 @@
       crossorigin="anonymous"
     ></script>
     <a id="drapeau-francais" href='french.html'>
-      <img src="francais.png" height=20 width=30/>
+      <!-- <img src="francais.png" height=20 width=30/> -->
+      fr
     </a>
-    <a id="drapeau-english-fr" href='index.html'>
-      <img src="english.png" height=32 width=30/>
+    <a id="drapeau-anglais" href='index.html'>
+      <!-- <img src="english.png" height=32 width=30/> -->
+      en
     </a>
     <a id="telegram" href='https://t.me/baking_finance' target="_blank">
       <img src="telegram.png" height=38 width=38/>
@@ -87,10 +89,9 @@
       </a>
     </div>
     <a id="mobile">*Mobile non supporté</a>
+    <!--
     <footer>
-      <div id="copyright">
-        <img src="./logo.png" alt="baking-finance-light-logo" id="logo-footer" width="20">Copyright &copy; <a href="french.html" class="fg-white fw-medium">Baking.finance</a>. Tous droits réservés</p>
-    </div>
-  </footer>
+        <img id="copyright" src="./logo.png" alt="baking-finance-light-logo" id="logo-footer" width="20">Copyright &copy; <a href="french.html" class="fg-white fw-medium">Baking.finance</a>. Tous droits réservés</p>
+  </footer> -->
   </body>
 </html>
