--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       integrity="sha384-12/A3/UyuGF7Hdkd8eaSXef8lEO7Jzz4FtJd4NpfZ2j/wlhPM2GWZPoxo8DkxwkI"
       crossorigin="anonymous"
     ></script>
-    <a id="drapeau-francais" href='french.html'><!-- <img src="francais.png" height=20 width=30/> -->fr</a>
-    <a id="drapeau-anglais" href='index.html'><!-- <img src="english.png" height=32 width=30/> -->en</a>
+    <div id="lang">
+      <a id="drapeau-anglais" href='index.html'><!-- <img src="english.png" height=32 width=30/> -->en</a>
+      <a id="drapeau-francais" href='french.html'><!-- <img src="francais.png" height=20 width=30/> -->fr</a>
     </div>
     <a id="telegram" href='https://t.me/baking_finance' target="_blank">
       <img src="telegram.png" height=38 width=38/>
