--- a/french.html
+++ b/french.html
@@ -13,12 +13,12 @@
       <a id="drapeau-anglais" href='index.html'><!-- <img src="english.png" height=32 width=30/> -->en</a>
       <a id="drapeau-francais" href='french.html'><!-- <img src="francais.png" height=20 width=30/> -->fr</a>
     </div>
-    <a id="telegram" href='https://t.me/baking_finance' target="_blank">
-      <img src="telegram.png" height=38 width=38/>
-    </a>
-    <a id="twitter" href='https://twitter.com/BakingFinance' target="_blank">
-      <img src="twitter.png" height=38 width=38/>
-    </a>
+    <div id="xtzprice" class="inline">
+      <script defer src="https://www.livecoinwatch.com/static/lcw-widget.js"></script>
+      <p id="price" class="livecoinwatch-widget-6" lcw-coin="XTZ" lcw-base="EUR" lcw-period="d" lcw-color-tx="#c09bc4" lcw-color-bg="#f5f5f5" lcw-border-w="0" ></p>
+      </div>
+      <a id="telegram" href='https://t.me/baking_finance' target="_blank"><img src="telegram.png" height=38 width=38/></a>
+      <a id="twitter" href='https://twitter.com/BakingFinance' target="_blank"><img src="twitter.png" height=38 width=38/></a>
     <title>Baking.Finance - Déléguez vos XTZ</title>
   </head>
   <body>
