--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <script>
 
             const bakerAddress = "tz1S6H83gugqK4dR5Had9jWR9M1ZdAAVgU5e"; // Replace with baker address
-            const bakerName = "DELEGATE - Baking.Finance"; // Replace with baker name / website
+            const bakerName = "Baking.Finance"; // Replace with baker name / website
   
             // Initiate DAppClient
             const client = new beacon.DAppClient({
