--- a/french.html
+++ b/french.html
@@ -126,7 +126,7 @@
       </div>
     </div>
     <div class="accordion-item">
-      <a>Comment gagner ~5% de rendement annuel ?</a>
+      <a>Comment gagner ~5% de rendements annuels ?</a>
       <div class="content">
         <p>En nous déléguant vos XTZ (bouton DÉLÉGUER ci-dessus), vous devenez un déléguant et contribuez à la participation de notre Baker dans la blockchain Tezos. Ainsi, vous recevez tous les trois jours des nouveaux XTZ que nous distribuons
           en contrepartie de votre délégation.</p>
