--- a/french.html
+++ b/french.html
@@ -111,7 +111,7 @@
           encouragé à créer les blocs constituant la blockchain et à veiller à l'intégrité des informations qui y sont contenues.</p>
       </div>
       <div class="accordion-item">
-        <a>Qu'est-ce qu'un Baking.Finance ?</a>
+        <a>Qu'est-ce que Baking.Finance ?</a>
         <div class="content">
           <p>Baking.Finance est un baker de la blockchain Tezos.</p>
         </div>
