--- a/french.html
+++ b/french.html
@@ -121,7 +121,7 @@
       <a>Qu'est-ce que la délégation ?</a>
       <div class="content">
         <p>C'est l'action de permettre en votre nom, à un Baker, de bénéficier de votre approbation pour valider des blocs et participer à l'évolution de la blockchain Tezos, grâce au mécanisme de vote du logiciel.
-          Grâce à la délégation, un Baker pourra valider plus de blocs, et par conséquent accroître sa contribution.
+          Grâce à la délégation, un Baker pourra valider plus de blocs, et par conséquent accroître sa contribution au réseau.
           Attention, cela ne constitue en rien un prêt ou un envoi de fonds. Il s'agit de signer sur la blockchain une opération de délégation.</p>
       </div>
     </div>
