--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <a>What is delegation?</a>
           <div class="content">
             <p>It is the action of allowing, on your behalf, a Baker to get your approval in order to validate blocks and participate in the blockchain evolution, through the Tezos voting process.
-              By delegating XTZ, a user will increase a Baker ability to participate in the network and block validation. 
+              By delegating XTZ, a user will increase a Baker ability to participate in the network and blocks validation. 
               Carefully notes that delegation doesn't mean lending or sending your funds. It is simply about signing a delegation operation in the Tezos blockchain.</p>
           </div>
         </div>
