--- a/index.html
+++ b/index.html
@@ -8,17 +8,37 @@
       integrity="sha384-12/A3/UyuGF7Hdkd8eaSXef8lEO7Jzz4FtJd4NpfZ2j/wlhPM2GWZPoxo8DkxwkI"
       crossorigin="anonymous"
     ></script>
+    
     <div id="lang">
+      <a id="dark_mode" >Dark mode: <span class="inner-switch">OFF</span></a>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+      <script src="dark_mode.js"></script>
+      | 
       <a id="drapeau-anglais" href='index.html'><!-- <img src="english.png" height=32 width=30/> -->en</a>
       <a id="drapeau-francais" href='french.html'><!-- <img src="francais.png" height=20 width=30/> -->fr</a>
     </div>
+
     <div id="xtzprice" class="inline">
+      <div id="logos-sociaux">
+        <a id="telegram" href='https://t.me/baking_finance' target="_blank"><img src="telegram.png" height=38 width=38/></a>
+        <a id="twitter" href='https://twitter.com/BakingFinance' target="_blank"><img src="twitter.png" height=38 width=38/></a>
+      </div>
     <script defer src="https://www.livecoinwatch.com/static/lcw-widget.js"></script>
     <p id="price" class="livecoinwatch-widget-6" lcw-coin="XTZ" lcw-base="USD" lcw-period="d" lcw-color-tx="#c09bc4" lcw-color-bg="#f5f5f5" lcw-border-w="0" ></p>
     </div>
-    <a id="telegram" href='https://t.me/baking_finance' target="_blank"><img src="telegram.png" height=38 width=38/></a>
-    <a id="twitter" href='https://twitter.com/BakingFinance' target="_blank"><img src="twitter.png" height=38 width=38/></a>
-    <title>Baking.Finance - Delegate your XTZ</title>
+    
+    <div hidden id="xtzprice" class="inline1">
+      <div id="logos-sociaux">
+        <a id="telegram" href='https://t.me/baking_finance' target="_blank"><img src="telegram.png" height=38 width=38/></a>
+        <a id="twitter" href='https://twitter.com/BakingFinance' target="_blank"><img src="twitter.png" height=38 width=38/></a>
+    </div>
+    <script defer src="https://www.livecoinwatch.com/static/lcw-widget.js"></script>
+    <p id="price" class="livecoinwatch-widget-6" lcw-coin="XTZ" lcw-base="USD" lcw-period="d" lcw-color-tx="#c09bc4" lcw-color-bg="#222" lcw-border-w="0" ></p>
+    </div>
+   
+  
+  
+  <title>Baking.Finance - Delegate your XTZ</title>
   </head>
   <body>
     <h1>Baking.Finance</h1>
@@ -80,7 +100,7 @@
       </a>
       Special inquiry :
       <a href="mailto:baking.finance@outlook.fr">
-        <img id="mail" src="mail.png" alt="francetfv-education-logo-mini éducation" height=25 width=30/>
+        <img id="mail" src="mail1.png" alt="francetfv-education-logo-mini éducation" height=20 width=25/>
       </a>
     </div>
     <a id="mobile">*Mobile not supported</a>
