little fix responsive design

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
    
   
   
-  <title>Baking.Finance - Delegate your XTZ</title>
+  <title >Baking.Finance - Delegate your XTZ</title>
   </head>
   <body>
-    <h1>Baking.Finance</h1>
+    <h1 id='title'>Baking.Finance</h1>
     <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
       <div id="header">Delegate your XTZ and earn ~5% annual rewards in just one click ! &#128176;</div>
