--- a/french.html
+++ b/french.html
@@ -38,10 +38,10 @@
     <p id="price" class="livecoinwatch-widget-6" lcw-coin="XTZ" lcw-base="USD" lcw-period="d" lcw-color-tx="#c09bc4" lcw-color-bg="#222" lcw-border-w="0" ></p>
     </div>
    
-    <title>Baking.Finance - Déléguez vos XTZ</title>
+    <title >Baking.Finance - Déléguez vos XTZ</title>
   </head>
   <body>
-    <h1>Baking.Finance</h1>
+    <h1 id="title">Baking.Finance</h1>
     <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
       <div id="header">Déléguez vos XTZ et gagner ~5% de rendements annuels en un clic ! &#128176;</div>
