--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <title >Baking.Finance - Delegate your XTZ</title>
   </head>
   <body>
+    <div id="main">
     <h1 id='title'>Baking.Finance</h1>
     <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
@@ -92,6 +93,7 @@
         <div id="error-message" class="hide"></div>
       </div>
     </div>
+  </div>
     <br></br>
     <div id="footer">
       Medium (in french) :
