--- a/french.html
+++ b/french.html
@@ -43,7 +43,9 @@
     <title >Baking.Finance - Déléguez vos XTZ</title>
   </head>
   <body>
-    <div id="main">
+    
+    <div class="container">
+
     <h1 id="title">Baking.Finance</h1>
     <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
@@ -95,7 +97,7 @@
         <div id="error-message" class="hide"></div>
       </div>
     </div>
-  </div>
+
     <br></br>
     <div id="footer">
       Medium :
@@ -107,11 +109,10 @@
         <img id="mail" src="mail1.png" alt="francetfv-education-logo-mini éducation" height=20 width=25/>
       </a>
     </div>
-    <a id="mobile">*Mobile non supporté</a>
 
   <link rel='stylesheet' href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css'>
   <link rel="stylesheet" href="app.css">
-  <div class="container body1">
+
   <h2>Questions fréquentes</h2>
   <div class="accordion">
     <div class="accordion-item">
