--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
   <title >Baking.Finance - Delegate your XTZ</title>
   </head>
   <body>
-    <div id="main">
+    
+    <div class="container">
+    
     <h1 id='title'>Baking.Finance</h1>
     <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
@@ -95,7 +97,7 @@
         <div id="error-message" class="hide"></div>
       </div>
     </div>
-  </div>
+  
     <br></br>
     <div id="footer">
       Medium (in french) :
@@ -107,11 +109,12 @@
         <img id="mail" src="mail1.png" alt="francetfv-education-logo-mini éducation" height=20 width=25/>
       </a>
     </div>
-    <a id="mobile">*Mobile not supported</a>
 
     <link rel='stylesheet' href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css'>
   <link rel="stylesheet" href="app.css">
-  <div class="container body1">
+  
+
+
   <h2>Frequently Asked Questions</h2>
   <div class="accordion">
     <div class="accordion-item">
@@ -167,6 +170,8 @@
       </div>
   
 </div>
+
+
 <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
 <script>
     // Code By Webdevtrick ( https://webdevtrick.com )
