--- a/french.html
+++ b/french.html
@@ -28,16 +28,16 @@
         <a id="twitter" href='https://twitter.com/BakingFinance' target="_blank"><img src="twitter.png" height=38 width=38/></a>
       </div>
     <script defer src="https://www.livecoinwatch.com/static/lcw-widget.js"></script>
-    <p id="price" class="livecoinwatch-widget-6" lcw-coin="XTZ" lcw-base="USD" lcw-period="d" lcw-color-tx="#c09bc4" lcw-color-bg="#f5f5f5" lcw-border-w="0" ></p>
+    <p id="price" class="livecoinwatch-widget-6" lcw-coin="XTZ" lcw-base="EUR" lcw-period="d" lcw-color-tx="#c09bc4" lcw-color-bg="#f5f5f5" lcw-border-w="0" ></p>
     </div>
     
     <div hidden id="xtzprice" class="inline1">
       <div id="logos-sociaux">
         <a id="telegram" href='https://t.me/baking_finance' target="_blank"><img src="telegram.png" height=38 width=38/></a>
         <a id="twitter" href='https://twitter.com/BakingFinance' target="_blank"><img src="twitter.png" height=38 width=38/></a>
-    </div>
+      </div>
     <script defer src="https://www.livecoinwatch.com/static/lcw-widget.js"></script>
-    <p id="price" class="livecoinwatch-widget-6" lcw-coin="XTZ" lcw-base="USD" lcw-period="d" lcw-color-tx="#c09bc4" lcw-color-bg="#222" lcw-border-w="0" ></p>
+    <p id="price" class="livecoinwatch-widget-6" lcw-coin="XTZ" lcw-base="EUR" lcw-period="d" lcw-color-tx="#c09bc4" lcw-color-bg="#222" lcw-border-w="0" ></p>
     </div>
    
     <title >Baking.Finance - Déléguez vos XTZ</title>
