little fix dark mode

--- a/french.html
+++ b/french.html
@@ -14,7 +14,7 @@
 
     <div id="lang">
 
-      <a id="dark_mode" >Mode sombre: <span class="inner-switch">OFF</span></a>
+      <a id="dark_mode" >Dark mode: <span class="inner-switch">OFF</span></a>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
       <script src="dark_mode.js"></script>
       |
