--- a/french.html
+++ b/french.html
@@ -40,7 +40,7 @@
     <h1 id="title">Baking.Finance</h1>
     <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
-      <div id="header">Déléguez vos XTZ et gagnez ~5% de rendements annuels en un clic ! &#128176;</div>
+      <div id="header">Déléguez vos XTZ et gagnez 6% de rendements annuels en un clic ! &#128176;</div>
       <div  id="content">
         <div id="balance-form">
           <button id="init" class="init">
