--- a/french.html
+++ b/french.html
@@ -31,7 +31,7 @@
     <p id="price" class="livecoinwatch-widget-6" lcw-coin="XTZ" lcw-base="EUR" lcw-period="d" lcw-color-tx="#c09bc4" lcw-color-bg="#222" lcw-border-w="0" ></p>
     </div>
    
-    <title >Baking.Finance - Déléguez vos XTZ</title>
+    <title >Baking.Finance - Déléguez vos Tez</title>
   </head>
   <body>
     
@@ -40,7 +40,7 @@
     <h1 id="title">Baking.Finance</h1>
     <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
-      <div id="header">Déléguez vos XTZ et gagnez 6% de rendements annuels en un clic ! &#128176;</div>
+      <div id="header">Déléguez vos Tez et gagnez 6% de rendements annuels en un clic ! &#128176;</div>
       <div  id="content">
         <div id="balance-form">
           <button id="init" class="init">
@@ -144,14 +144,14 @@
     <div class="accordion-item">
       <a>Comment gagner ~5% de rendements annuels ?</a>
       <div class="content">
-        <p>En nous déléguant vos XTZ (bouton DÉLÉGUER ci-dessus), vous devenez un déléguant et contribuez à la participation de notre Baker dans la blockchain Tezos. Ainsi, vous recevez tous les trois jours des nouveaux XTZ que nous distribuons
+        <p>En nous déléguant vos Tez (bouton DÉLÉGUER ci-dessus), vous devenez un déléguant et contribuez à la participation de notre Baker dans la blockchain Tezos. Ainsi, vous recevez tous les trois jours des nouveaux XTZ que nous distribuons
           en contrepartie de votre délégation.</p>
       </div>
     </div>
     <div class="accordion-item">
       <a>Y a-t-il un risque de perdre mes fonds ?</a>
       <div class="content">
-        <p>En effectuant l'action de déléguer vos XTZ, vous restez le seul maître de vos clés privées et donc de vos fonds. Ces fonds restent liquides, vous pouvez à tout moment les transférer ou les vendre
+        <p>En effectuant l'action de déléguer vos Tez, vous restez le seul maître de vos clés privées et donc de vos fonds. Ces fonds restent liquides, vous pouvez à tout moment les transférer ou les vendre
           sur des plateformes d'échanges de cryptomonnaies.</p>
       </div>
     </div>
