--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    
   
   
-  <title >Baking.Finance - Delegate your Tez</title>
+  <title >Baking.Finance - Delegate your tez</title>
   </head>
   <body>
     
@@ -40,7 +40,7 @@
     <h1 id='title'>Baking.Finance</h1>
     <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
-      <div id="header">Delegate your Tez and earn 6% annual rewards in just one click ! &#128176;</div>
+      <div id="header">Delegate your tez and earn 6% annual rewards in just one click ! &#128176;</div>
       <div  id="content">
         <div id="balance-form">
           <button id="init" class="init">
@@ -142,12 +142,12 @@
           <a>What is delegation?</a>
           <div class="content">
             <p>It is the action of allowing, on your behalf, a Baker to get your approval in order to validate blocks and participate in the blockchain evolution, through the Tezos voting process.
-              By delegating Tez, a user will increase a Baker ability to participate in the network and blocks validation. 
+              By delegating tez, a user will increase a Baker ability to participate in the network and blocks validation. 
               Carefully notes that delegation doesn't mean lending or sending your funds. It is simply about signing a delegation operation in the Tezos blockchain.</p>
           </div>
         </div>
         <div class="accordion-item">
-          <a>How can I earn ~5% annual rewards in Tez?</a>
+          <a>How can I earn ~6% annual rewards in tez?</a>
           <div class="content">
             <p>By delegating your funds (button DELEGATE above), you become a delegator and make a contribution to our Baker. Thus, every ~3 days, you will receive new XTZ from us,
               to reward your contribution.</p>
@@ -156,7 +156,7 @@
         <div class="accordion-item">
           <a>Can I lose my funds?</a>
           <div class="content">
-            <p>By delegating your Tez, you stay the only owner of the private keys that control the funds. Your delegated funds stay liquid, therefore, at any time you can
+            <p>By delegating your tez, you stay the only owner of the private keys that control the funds. Your delegated funds stay liquid, therefore, at any time you can
               transfer them, or sell them on a cryptocurrency exchange.</p>
           </div>
         </div>
