--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   <title >Baking.Finance - Delegate your tez</title>
   </head>
   <body>
-    
+        <h1 id='title'>Baking Finance</h1>
+
     <div class="container">
     
-    <h1 id='title'>Baking.Finance</h1>
     <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
       <div id="header">Delegate your tez and earn 6% annual rewards in just one click ! &#128176;</div>
