--- a/french.html
+++ b/french.html
@@ -34,10 +34,10 @@
     <title >Baking.Finance - Déléguez vos tez</title>
   </head>
   <body>
-    
+    <h1 id="title">Baking Finance</h1>
+
     <div class="container">
 
-    <h1 id="title">Baking.Finance</h1>
     <img src="./logo.png" height=95 width=85 id="logobaking"/>
     <div id="dialog">
       <div id="header">Déléguez vos tez et gagnez 6% de rendements annuels en un clic ! &#128176;</div>
