--- a/index.html
+++ b/index.html
@@ -528,20 +528,20 @@
                         <div id="collapse1" class="collapse" data-parent="#accordionFAQ">
                             <div class="accordion-content">
                                 <p>
-                                    By delegating tez, a user will increase a Baker ability to participate in the network and blocks validation. 
-                                    Carefully notes that delegation doesn't mean lending or sending your funds. It is simply about signing a delegation operation in the Tezos blockchain.
+                                    It is the action of allowing, on your behalf, a Baker to get your approval in order to validate blocks and participate in the blockchain evolution, through the Tezos voting process.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="accordion-item wow fadeInRight" data-wow-delay="150ms">
+                    <div class="accordion-item wow fadeInRight">
                         <div class="accordion-trigger">
-                            <button class="btn collapsed" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2"></button>How can I earn ~6% annual rewards in Tez?</button>
+                            <button class="btn collapsed" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">How can I earn ~6% annual rewards in Tez?</button>
                         </div>
-                        <div id="collapse2" class="collapse" data-parent="#accordionFAQ">
+                        <div id="collapse1" class="collapse" data-parent="#accordionFAQ">
                             <div class="accordion-content">
-                                <p>By delegating your funds (button DELEGATE above), you become a delegator and make a contribution to our Baker. Thus, every ~3 days, you will receive new XTZ from us,
-                                    to reward your contribution.
+                                <p>
+                                    By delegating tez, a user will increase a Baker ability to participate in the network and blocks validation. 
+                                    Carefully notes that delegation doesn't mean lending or sending your funds. It is simply about signing a delegation operation in the Tezos blockchain.
                                 </p>
                             </div>
                         </div>
