--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light navbar-floating">
     <div class="container">
-        <img id="baking-finance-logo" class="navbar-brand" src="./images/logo-light.png"></a>
+        <img id="baking-finance-logo" class="navbar-brand"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
