fix mobile version

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light navbar-floating">
     <div class="container">
-        <img id="baking-finance-logo" class="navbar-brand"></a>
+        <a id="baking-finance-logo" class="navbar-brand"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,9 +39,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-center" href="#tezos">Tezos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-center" href="#nos-services">Our services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-center" href="#investir">Invest</a>
@@ -164,10 +161,10 @@
                                     <img class="custom-icon" src="./images/contract-icon.png">
                                 </div>
                                 <div class="iconic-content">
-                                    <h5>Les Smart Contracts</h5>
-                                    <p class="fs-small">Une des particularités de la Blockchain <strong>Tezos</strong> est qu'elle permet le développement de contrats intelligents
-                                        (appelés <strong>Smart Contracts</strong>). <br>
-                                        Ces contrats <strong>intelligents</strong> sont des programmes informatiques déployés sur la <strong>Blockchain</strong> et qui exécutent des opérations sur cette dernière.
+                                    <h5>Smart Contracts</h5>
+                                    <p class="fs-small">One the key feature of the <strong>Tezos</strong> Blockchain is that it allows the developement and deployment of 
+                                        <strong>Smart Contracts</strong>. <br>
+                                        These <strong>smart</strong> contracts are codes, deployed on the <strong>Blockchain</strong> to enable various interactions and operation whithin the chain.
                                     </p>
                                 </div>
                             </div>
@@ -176,10 +173,10 @@
                                     <img class="custom-icon" src="./images/security-icon.png">
                                 </div>
                                 <div class="iconic-content">
-                                    <h5>La Sécurité</h5>
-                                    <p class="fs-small">La blockchain Tezos offre également des garanties de <strong>sécurité</strong>,
-                                        notamment grâce à des méthodes <strong>formelles de vérification</strong>
-                                        (méthode de preuve d'un programme informatique) permettant de prouver <strong>mathématiquement</strong> les Smart Contracts qui y sont déployés.
+                                    <h5>Security</h5>
+                                    <p class="fs-small">The Tezos blockchain offers certains  <strong>security</strong> guarantees,
+                                        especially thanks to <strong>formal verification</strong> methods 
+                                        allowing to <strong>mathematically</strong> verify Smart Contracts before deployment.
                                     </p>
                                 </div>
                             </div>
@@ -188,11 +185,11 @@
                                     <img class="custom-icon" src="./images/nodes-icon.png">
                                 </div>
                                 <div class="iconic-content">
-                                    <h5>La Gouvernance</h5>
+                                    <h5>Governance</h5>
                                     <p class="fs-small">
-                                        Son mécanisme de gouvernance dit "<strong>on-chain</strong>", caractérisé par un processus de vote sur la chaîne de bloc,
-                                        permet l'autoévolution du logiciel par un système de proposition et de <strong>vote de la communauté.</strong><br>
-                                        La <strong>Fondation Tezos</strong> est un organisme à but non lucratif en charge des moyens de développement et d'évolution de cette infrastructure.
+                                        The mecanism of "<strong>on-chain</strong>" governance, characterized by a voting process on the blockchain,
+                                        allows the autoevolutivity of the software thanks to a proposition and <strong>community voting</strong> system.<br>
+                                        The <strong>Tezos Foundation</strong> is the non-profit organization responsible for the development and the sustainability of the chain.
                                     </p>
                                 </div>
                             </div>
@@ -204,10 +201,10 @@
     </div>
 </div>
 
-<!-- Nos Services -->
+<!-- Nos Services 
 <div id="nos-services" class="page-section no-scroll bg-dark">
     <div class="container">
-        <h1 class="text-center fg-white">Nos Services</h1>
+        <h1 class="text-center fg-white">Our services</h1>
         <p class="fs-large font-italic fg-white text-center">Nous sommes un validateur du réseau Tezos (appelé Baker).
             <br>
             Nous participons à la décentralisation et à la sécurité de la blockchain Tezos.
@@ -247,6 +244,7 @@
         </div>
     </div>
 </div>
+-->
 
 <!-- Wallets -->
 <div id="wallets" class="page-section" th:style="'pattern_1.svg'">
