--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col-lg-6 offset-lg-1 py-3 wow fadeInUp inline-flex-center">
                     <div>
                         <h1 class="mb-4">Tezos</h1>
-                        <p class="mb-4"><strong>Tezos</strong> is a software, precisely a distributed ledger technology also known as blockchain. <br>
+                        <p class="mb-4"><strong>Tezos</strong> is a software, precisely a distributed ledger technology also known as a blockchain. <br>
                             The basic unit of account a <strong>cryptocurrency</strong> (or digital currency) called "tez", symbol : ꜩ or<strong> XTZ</strong>
                         </p>
                         <a href="https://tezos.com" target="_blank" class="btn btn-outline-primary rounded-pill">Tezos.com</a>
