--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                                 </div>
                                 <div class="iconic-content">
                                     <h5>Smart Contracts</h5>
-                                    <p class="fs-small">One the key feature of the <strong>Tezos</strong> Blockchain is that it allows the developement and deployment of 
-                                        <strong>Smart Contracts</strong>. <br>
-                                        These <strong>smart</strong> contracts are codes, deployed on the <strong>Blockchain</strong> to enable various interactions and operation whithin the chain.
+                                    <p class="fs-small">One of the key features of the <strong>Tezos</strong> Blockchain is that it allows the developement and deployment of 
+                                        <strong>Smart Contracts</strong>.<br>
+                                        These <strong>smart</strong> contracts deployed on the <strong>Blockchain</strong> enable various interactions and operation submission on the chain.
                                     </p>
                                 </div>
                             </div>
@@ -253,7 +253,7 @@
                     <a class="iconic-item wow fadeInUp wallet" href="https://airgap.it/" target="_blank">
                         <div class="iconic-content">
                             <h5>AirGap</h5>
-                            <p class="fs-small">AirGap is a <strong>wallet</strong> available for Android, IOS, macOS, Windows.</p>
+                            <p class="fs-small">AirGap is a software <strong>wallet</strong> available for Android, IOS, macOS, Windows.</p>
                         </div>
                         <img src="./images/airgap-logo.png" alt="label" class="iconic-md fg-white">
                     </a>
@@ -267,14 +267,14 @@
                     <a class="iconic-item wow fadeInUp wallet" href="https://trezor.io/" target="_blank">
                         <div class="iconic-content">
                             <h5>Trezor (Hardware)</h5>
-                            <p class="fs-small">Trezor is a <strong>Hardware wallet</strong>. It protects your private keys aginst hacks.</p>
+                            <p class="fs-small">Trezor is a <strong>Hardware wallet</strong> which helps to protects your private keys aginst hacks.</p>
                         </div>
                         <img src="./images/trezor-logo.png" alt="label" class="iconic-md fg-white">
                     </a>
                     <a class="iconic-item wow fadeInUp wallet" href="https://templewallet.com/" target="_blank">
                         <div class="iconic-content">
                             <h5>Temple Wallet</h5>
-                            <p class="fs-small">A non-custodial web extension wallet. It is currently one of the most used ones.</p>
+                            <p class="fs-small">A non-custodial web extension wallet, currently one of the most used ones.</p>
                         </div>
                         <img src="./images/templewallet.png" alt="label" class="iconic-md fg-white">
                     </a>
@@ -291,7 +291,7 @@
                         <img src="./images/zengo-logo.png" alt="label" class="iconic-md fg-white">
                         <div class="iconic-content">
                             <h5>ZenGo</h5>
-                            <p class="fs-small">ZenGo is a <strong>mutli-wallet</strong> available for several cryptocurrencies, including Tezos. Available on Android & IOS.</p>
+                            <p class="fs-small">ZenGo is a <strong>mutlicurrency-wallet</strong>, supporting Tezos. It is Available on Android & IOS.</p>
                         </div>
                     </a>
                     <a class="iconic-item wow fadeInUp wallet" href="https://trezor.io/" target="_blank">
@@ -305,14 +305,14 @@
                         <img src="./images/trust-wallet-logo.png" alt="label" class="iconic-md fg-white">
                         <div class="iconic-content">
                             <h5>Trust Wallet</h5>
-                            <p class="fs-small">Well-known multicurrency wallet. It is available for Android & IOS.</p>
+                            <p class="fs-small">Well-known multicurrency wallet, available for Android & IOS.</p>
                         </div>
                     </a>
                     <a class="iconic-item wow fadeInUp wallet" href="https://www.ledger.com/" target="_blank">
                         <img src="./images/ledger-logo.png" alt="label" class="iconic-md fg-white">
                         <div class="iconic-content">
                             <h5>Ledger (Hardware)</h5>
-                            <p class="fs-small">Ledger is a <strong>Hardware Wallet</strong>. It is known as one of the most secure ones.</p>
+                            <p class="fs-small">Ledger is a <strong>Hardware Wallet</strong>, also known as one of the most secure ones.</p>
                         </div>
                     </a>
                 </div>
@@ -325,7 +325,7 @@
 <div id="investir" class="page-section no-scroll bg-dark fg-white">
     <h2 class="text-center wow fadeIn mb-5">Invest</h2>
     <div class="container">
-        <p class="text-center">Delegate your Tez and enjoy the ~6% annual return</p>
+        <p class="text-center">Delegate your tez and enjoy the 6% annual return</p>
         <div class="row align-items-center">
             <div class="col-lg-5 wow fadeIn ">
                 <div class="img-place">
@@ -348,7 +348,7 @@
                             <div class="iconic-content">
                                 <h5 class="font-weight-bold">Delegate your Tez by clicking on the "Delegate" button on top of the page</h5>
                                 <p class="fs-small">
-                                    Delegate your Tez using the one-click "Delegate" button  .
+                                    Delegate your Tez using the one-click "Delegate" button.
                                 </p>
                             </div>
                         </div>
@@ -390,7 +390,7 @@
                         <img class="exchange-logo" src="./images/binance-logo.png" alt="binance-logo">
                     </div>
                     <p class="fs-vlarge font-weight-bolder">Binance</p>
-                    <p class="fs-small fg-grey">Number 1 of the exchanges. They charge 0.1% on trading fees </p>
+                    <p class="fs-small fg-grey">Number 1 of the exchanges.</p>
                 </a>
             </div>
             <div class="col-md-6 col-lg-3 py-3">
@@ -399,7 +399,7 @@
                         <img class="exchange-logo" src="./images/kraken-logo.png" alt="kraken-logo">
                     </div>
                     <p class="fs-vlarge font-weight-bolder">Kraken</p>
-                    <p class="fs-small fg-grey">Leader of the US market. They charge 0.2% trading fees.</p>
+                    <p class="fs-small fg-grey">Leader of the US market.</p>
                 </a>
             </div>
             <div class="col-md-6 col-lg-3 py-3">
@@ -408,7 +408,7 @@
                         <img class="exchange-logo" src="./images/coinbase-logo.png" alt="coinbase-logo">
                     </div>
                     <p class="fs-vlarge font-weight-bolder">Coinbase</p>
-                    <p class="fs-small fg-grey">Well known for the user-friendly interface. They charge 1.5% trading fees.</p>
+                    <p class="fs-small fg-grey">Well known for its user-friendly interface.</p>
                 </a>
             </div>
             <div class="col-md-6 col-lg-3 py-3">
@@ -417,7 +417,7 @@
                         <img class="exchange-logo" src="./images/crypto-com-logo.png" alt="crypto-com-logo">
                     </div>
                     <p class="fs-vlarge font-weight-bolder">Crypto.com</p>
-                    <p class="fs-small fg-grey">Fintech specializes in cryptocurrencies. They charge low fees.</p>
+                    <p class="fs-small fg-grey">Fintech specializes in cryptocurrencies.</p>
                 </a>
             </div>
             <div class="col-md-6 col-lg-3 py-3">
@@ -551,7 +551,7 @@
           </button>
           <div class="accordion-content">
             <p>
-              By delegating your funds (button DELEGATE above), you become a delegator and make a contribution to our Baker. Thus, every ~3 days, you will receive new XTZ from us,
+              By delegating your funds (button DELEGATE above), you become a delegator and make a contribution to our Baker. Thus, every 3 days, you will receive new XTZ from us,
               to reward your contribution.
             </p>
           </div>
