--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div>
                         <h1 class="mb-4">Tezos</h1>
                         <p class="mb-4"><strong>Tezos</strong> is a software, precisely a distributed ledger technology also known as a blockchain. <br>
-                            The basic unit of account a <strong>cryptocurrency</strong> (or digital currency) called "tez", symbol : ꜩ or<strong> XTZ</strong>
+                            The basic unit of account is a <strong>cryptocurrency</strong> (or digital currency) called "tez", symbol : ꜩ or<strong> XTZ</strong>.
                         </p>
                         <a href="https://tezos.com" target="_blank" class="btn btn-outline-primary rounded-pill">Tezos.com</a>
                     </div>
@@ -161,7 +161,7 @@
                                     <h5>Smart Contracts</h5>
                                     <p class="fs-small">One of the key features of the <strong>Tezos</strong> Blockchain is that it allows the developement and deployment of 
                                         <strong>Smart Contracts</strong>.<br>
-                                        These <strong>smart</strong> contracts deployed on the <strong>Blockchain</strong> enable various interactions and operation submission on the chain.
+                                        <strong>Smart contracts</strong> deployed on the <strong>Blockchain</strong> enable various interactions and operation submission on the chain.
                                     </p>
                                 </div>
                             </div>
@@ -171,9 +171,9 @@
                                 </div>
                                 <div class="iconic-content">
                                     <h5>Security</h5>
-                                    <p class="fs-small">The Tezos blockchain offers certains  <strong>security</strong> guarantees,
-                                        especially thanks to <strong>formal verification</strong> methods 
-                                        allowing to <strong>mathematically</strong> verify Smart Contracts before deployment.
+                                    <p class="fs-small">The Tezos blockchain offers some <strong>security</strong> guarantees,
+                                        especially thanks to <strong>formal verification</strong> methods, 
+                                        allowing to <strong>mathematically</strong> verify the code before official deployment.
                                     </p>
                                 </div>
                             </div>
@@ -260,14 +260,14 @@
                     <a class="iconic-item wow fadeInUp wallet" href="https://cryptonomic.tech/galleon.html" target="_blank">
                         <div class="iconic-content">
                             <h5>Galleon Wallet</h5>
-                            <p class="fs-small"><strong>Opensource</strong> and <strong>Tezos</strong> specific, Galleon is a Wallet available on macOS, Windows et Linux.</p>
+                            <p class="fs-small"><strong>Opensource</strong> and <strong>Tezos</strong> specific, Galleon is a Wallet available on macOS, Windows and Linux.</p>
                         </div>
                         <img src="./images/cryptonomic-logo.png" alt="label" class="iconic-md fg-white">
                     </a>
                     <a class="iconic-item wow fadeInUp wallet" href="https://trezor.io/" target="_blank">
                         <div class="iconic-content">
                             <h5>Trezor (Hardware)</h5>
-                            <p class="fs-small">Trezor is a <strong>Hardware wallet</strong> which helps to protects your private keys aginst hacks.</p>
+                            <p class="fs-small">Trezor is a <strong>Hardware wallet</strong> which helps to protect your private keys aginst hacks.</p>
                         </div>
                         <img src="./images/trezor-logo.png" alt="label" class="iconic-md fg-white">
                     </a>
@@ -540,7 +540,7 @@
             <p>
               It is the action of allowing, on your behalf, a Baker to get your approval in order to validate blocks and participate in the blockchain evolution, through the Tezos voting process. <br>
               By delegating tez, a user will increase a Baker ability to participate in the network and blocks validation. 
-              Carefully notes that delegation doesn't mean lending or sending your funds. It is simply about signing a delegation operation in the Tezos blockchain.
+              Please note that delegation doesn't mean lending or sending your funds. It is simply about signing a delegation operation in the Tezos blockchain.
             </p>
           </div>
         </div>
@@ -678,6 +678,11 @@
                     <a href="https://www.instagram.com/baking.finance/" target="_blank" class="btn btn-fab btn-primary fg-white">
                         <div class="inline-flex-center" style="height: 100%; align-items: center;">
                             <img class="custom-icon-2 height-auto" src="./images/instagram-icon.png">
+                        </div>
+                    </a>
+                    <a href="https://t.me/baking_finance" target="_blank" class="btn btn-fab btn-primary fg-white">
+                        <div class="inline-flex-center" style="height: 100%; align-items: center;">
+                            <img class="custom-icon-2 height-auto" src="./images/telegram.png">
                         </div>
                     </a>
                 </div>
