--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-lg-5 mt-3 mt-lg-0">
                 <li class="nav-item dropdown active">
-                    <a class="nav-link text-center" href="#introduction" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Accueil</a>
+                    <a class="nav-link text-center" href="#introduction" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Welcome</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-center" href="#tezos">Tezos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-center" href="#wallets">Wallet</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-center" href="#investir">Invest</a>
@@ -639,7 +642,6 @@
                 <h5 class="mb-3">Pages</h5>
                 <ul class="menu-link">
                     <li><a href="#tezos">Tezos</a></li>
-                    <li><a href="#nos-services">Our services</a></li>
                     <li><a href="#wallets">Wallets</a></li>
                     <li><a href="#investir">Invest</a></li>
                     <li><a href="#faq">FAQ</a></li>
@@ -663,7 +665,7 @@
             </div>
             <div class="col-md-6 col-lg-4 py-3">
                 <h5 class="mb-3">Follow Baking.finance</h5>
-                <!-- Social Media Button -->
+                <!-- Social Media Buttons -->
                 <div class="mt-4">
                     <a href="https://www.facebook.com/Bakingfinance-100183958589461" target="_blank" class="btn btn-fab btn-primary fg-white">
                         <div class="inline-flex-center" style="height: 100%; align-items: center;">
