--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     ></script>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light navbar-floating">
+<nav class="navbar navbar-expand-lg navbar-light navbar-floating" id="navmenu">
     <div class="container">
         <a id="baking-finance-logo" class="navbar-brand"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,8 +50,7 @@
                     <a class="nav-link text-center" href="#faq">FAQ</a>
                 </li>
             </ul>
-            <div class="flex-center btn btn-dark rounded-pill ml-auto">
-                <!-- <a class="flex-center btn btn-dark rounded-pill" href="#wallets">Delegate</a> -->
+            <div class="flex-center btn btn-dark rounded-pill ml-auto positiondelegate">
                 <a id="init">
                 Delegate
                 </a>
@@ -116,7 +115,8 @@
                         Discover the Tezos blockchain by delegating your coins.<br>
                         Receive freshly created Tez every three days.
                     </p>
-                    <a href="#tezos" class="btn btn-primary rounded-pill">See more</a>
+                    <a href="#tezos" class="btn btn-primary rounded-pill" id="seemoreweb">See more</a><br>
+                    <a class="btn btn-primary rounded-pill" id="delegatemobile" target="_blank" href="https://tzstats.com/tz1S6H83gugqK4dR5Had9jWR9M1ZdAAVgU5e">Our validator</a>
                 </div>
             </div>
         </div>
