feat: earn up to 8%

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             #1 baking.finance
                         </div>
                     </div>
-                    <h2 class="mb-4 black-shadow">Delegate your tez and earn 6% annual rewards in one click ! 💰</h2>
+                    <h2 class="mb-4 black-shadow">Delegate your tez and earn up to 8% annual rewards in one click ! 💰</h2>
                     <p class="mb-4 black-shadow">Participate in tomorrow's economy.<br>
                         Discover the Tezos blockchain by delegating your coins.<br>
                         Receive freshly created Tez every three days.
